basic impl working

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Rahul Bhatt",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "mongodb": "^2.2.24",
     "path": "^0.12.7"
   }
 }
